--- a/css/custom.css
+++ b/css/custom.css
@@ -136,3 +136,11 @@ textarea {
   flex-wrap: wrap;
   height: auto;
 }
+
+.display-input {
+  min-height: 2em;
+}
+
+.display-input:empty {
+  border: 1px dashed rgba(69,77,93,.3);
+}
