make icons vertically center

--- a/css/custom.css
+++ b/css/custom.css
@@ -144,3 +144,9 @@ textarea {
 .display-input:empty {
   border: 1px dashed rgba(69,77,93,.3);
 }
+
+.mdi {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
