update google drive function and  update user detail display

--- a/css/custom.css
+++ b/css/custom.css
@@ -84,6 +84,10 @@ body {
   border: 2px solid white;
 }
 
+.sidebar .tile-subtitle {
+  font-size: .75rem;
+}
+
 .sidebar-footer {
   font-size: 90%;
 }
