--- a/css/custom.css
+++ b/css/custom.css
@@ -101,6 +101,34 @@ body {
   overflow: auto;
 }
 
+#modal-sortfields .sort-item {
+  display: flex;
+  flex-direction: row;
+  border: 1px solid #ddd;
+  margin-bottom: -1px;
+  padding: 1em;
+}
+
+#modal-sortfields .sort-item:first-child {
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+
+#modal-sortfields .sort-item:last-child {
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+
+#modal-sortfields .sort-item > * {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#modal-sortfields .sort-item > *:last-child {
+  flex-grow: 1;
+}
+
 .content {
   flex-grow: 1;
   overflow: hidden;
