--- a/css/custom.css
+++ b/css/custom.css
@@ -109,7 +109,7 @@ body {
   padding: 1em;
 }
 
-#modal-sortfields .sort-item:first-child {
+#modal-sortfields .sort-item:nth-child(2) {
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
 }
