--- a/css/spectre.css
+++ b/css/spectre.css
@@ -295,20 +295,20 @@ body {
 }
 
 a {
-  color: #5755d9;
+  color: #009688;
   outline: none;
   text-decoration: none;
 }
 
 a:focus {
-  box-shadow: 0 0 0 .1rem rgba(87, 85, 217, .2);
+  box-shadow: 0 0 0 .1rem rgba(0, 150, 136, .2);
 }
 
 a:focus,
 a:hover,
 a:active,
 a.active {
-  color: #4240d4;
+  color: #007d71;
   text-decoration: underline;
 }
 
@@ -540,9 +540,9 @@ dl dd {
   -moz-appearance: none;
   appearance: none;
   background: #fff;
-  border: .05rem solid #5755d9;
+  border: .05rem solid #009688;
   border-radius: .1rem;
-  color: #5755d9;
+  color: #009688;
   cursor: pointer;
   display: inline-block;
   font-size: .8rem;
@@ -562,20 +562,20 @@ dl dd {
 }
 
 .btn:focus {
-  box-shadow: 0 0 0 .1rem rgba(87, 85, 217, .2);
+  box-shadow: 0 0 0 .1rem rgba(0, 150, 136, .2);
 }
 
 .btn:focus,
 .btn:hover {
-  background: #f1f1fc;
-  border-color: #4b48d6;
+  background: #e0f2f1;
+  border-color: #00877a;
   text-decoration: none;
 }
 
 .btn:active,
 .btn.active {
-  background: #4b48d6;
-  border-color: #3634d2;
+  background: #00877a;
+  border-color: #006d63;
   color: #fff;
   text-decoration: none;
 }
@@ -595,22 +595,22 @@ dl dd {
 }
 
 .btn.btn-primary {
-  background: #5755d9;
-  border-color: #4b48d6;
+  background: #009688;
+  border-color: #00877a;
   color: #fff;
 }
 
 .btn.btn-primary:focus,
 .btn.btn-primary:hover {
-  background: #4240d4;
-  border-color: #3634d2;
+  background: #007d71;
+  border-color: #006d63;
   color: #fff;
 }
 
 .btn.btn-primary:active,
 .btn.btn-primary.active {
-  background: #3a38d2;
-  border-color: #302ecd;
+  background: #007268;
+  border-color: #00635a;
   color: #fff;
 }
 
@@ -680,14 +680,14 @@ dl dd {
 .btn.btn-link {
   background: transparent;
   border-color: transparent;
-  color: #5755d9;
+  color: #009688;
 }
 
 .btn.btn-link:focus,
 .btn.btn-link:hover,
 .btn.btn-link:active,
 .btn.btn-link.active {
-  color: #4240d4;
+  color: #007d71;
 }
 
 .btn.btn-sm {
@@ -840,8 +840,8 @@ legend {
 }
 
 .form-input:focus {
-  border-color: #5755d9; 
-  box-shadow: 0 0 0 .1rem rgba(87, 85, 217, .2);
+  border-color: #009688; 
+  box-shadow: 0 0 0 .1rem rgba(0, 150, 136, .2);
 }
 
 .form-input::-webkit-input-placeholder {
@@ -934,8 +934,8 @@ textarea.form-input {
 }
 
 .form-select:focus {
-  border-color: #5755d9; 
-  box-shadow: 0 0 0 .1rem rgba(87, 85, 217, .2);
+  border-color: #009688; 
+  box-shadow: 0 0 0 .1rem rgba(0, 150, 136, .2);
 }
 
 .form-select::-ms-expand {
@@ -1011,15 +1011,15 @@ textarea.form-input {
 .form-checkbox input:focus + .form-icon,
 .form-radio input:focus + .form-icon,
 .form-switch input:focus + .form-icon {
-  border-color: #5755d9; 
-  box-shadow: 0 0 0 .1rem rgba(87, 85, 217, .2);
+  border-color: #009688; 
+  box-shadow: 0 0 0 .1rem rgba(0, 150, 136, .2);
 }
 
 .form-checkbox input:checked + .form-icon,
 .form-radio input:checked + .form-icon,
 .form-switch input:checked + .form-icon {
-  background: #5755d9;
-  border-color: #5755d9;
+  background: #009688;
+  border-color: #009688;
 }
 
 .form-checkbox .form-icon,
@@ -1081,8 +1081,8 @@ textarea.form-input {
 }
 
 .form-checkbox input:indeterminate + .form-icon {
-  background: #5755d9;
-  border-color: #5755d9;
+  background: #009688;
+  border-color: #009688;
 }
 
 .form-checkbox input:indeterminate + .form-icon::before {
@@ -1344,13 +1344,13 @@ input.disabled + .form-icon {
 }
 
 .label.label-primary {
-  background: #5755d9;
+  background: #009688;
   color: #fff;
 }
 
 .label.label-secondary {
-  background: #f1f1fc;
-  color: #5755d9;
+  background: #e0f2f1;
+  color: #009688;
 }
 
 .label.label-success {
@@ -1678,8 +1678,7 @@ video.video-responsive::before {
     display: none !important;
   }
   .show-xl {
-    display: flex !important; 
-    display: -ms-flexbox !important;
+    display: block !important;
   }
 }
 
@@ -1739,8 +1738,7 @@ video.video-responsive::before {
     display: none !important;
   }
   .show-lg {
-    display: flex !important; 
-    display: -ms-flexbox !important;
+    display: block !important;
   }
 }
 
@@ -1800,8 +1798,7 @@ video.video-responsive::before {
     display: none !important;
   }
   .show-md {
-    display: flex !important; 
-    display: -ms-flexbox !important;
+    display: block !important;
   }
 }
 
@@ -1861,8 +1858,7 @@ video.video-responsive::before {
     display: none !important;
   }
   .show-sm {
-    display: flex !important; 
-    display: -ms-flexbox !important;
+    display: block !important;
   }
 }
 
@@ -1922,8 +1918,7 @@ video.video-responsive::before {
     display: none !important;
   }
   .show-xs {
-    display: flex !important; 
-    display: -ms-flexbox !important;
+    display: block !important;
   }
 }
 
@@ -1998,7 +1993,7 @@ summary.accordion-header::-webkit-details-marker {
 }
 
 .avatar {
-  background: #5755d9;
+  background: #009688;
   border-radius: 50%;
   color: rgba(255, 255, 255, .85);
   display: inline-block;
@@ -2094,7 +2089,7 @@ summary.accordion-header::-webkit-details-marker {
 
 .badge[data-badge]::after,
 .badge:not([data-badge])::after {
-  background: #5755d9;
+  background: #009688;
   background-clip: padding-box;
   border-radius: .5rem;
   box-shadow: 0 0 0 .1rem #fff;
@@ -2188,7 +2183,7 @@ summary.accordion-header::-webkit-details-marker {
 }
 
 .bar .bar-item {
-  background: #5755d9;
+  background: #009688;
   color: #fff;
   display: block;
   -ms-flex-negative: 0;
@@ -2231,7 +2226,7 @@ summary.accordion-header::-webkit-details-marker {
 }
 
 .bar-slider .bar-slider-btn {
-  background: #5755d9;
+  background: #009688;
   border: 0;
   border-radius: 50%;
   height: .6rem;
@@ -2244,7 +2239,7 @@ summary.accordion-header::-webkit-details-marker {
 }
 
 .bar-slider .bar-slider-btn:active {
-  box-shadow: 0 0 0 .1rem #5755d9;
+  box-shadow: 0 0 0 .1rem #009688;
 }
 
 .card {
@@ -2307,7 +2302,7 @@ summary.accordion-header::-webkit-details-marker {
 }
 
 .chip.active {
-  background: #5755d9;
+  background: #009688;
   color: #fff;
 }
 
@@ -2406,14 +2401,14 @@ summary.accordion-header::-webkit-details-marker {
 
 .menu .menu-item > a:focus,
 .menu .menu-item > a:hover {
-  background: #f1f1fc;
-  color: #5755d9;
+  background: #e0f2f1;
+  color: #009688;
 }
 
 .menu .menu-item > a:active,
 .menu .menu-item > a.active {
-  background: #f1f1fc;
-  color: #5755d9;
+  background: #e0f2f1;
+  color: #009688;
 }
 
 .menu .menu-item .form-checkbox,
@@ -2534,7 +2529,7 @@ summary.accordion-header::-webkit-details-marker {
 
 .nav .nav-item a:focus,
 .nav .nav-item a:hover {
-  color: #5755d9;
+  color: #009688;
 }
 
 .nav .nav-item.active > a {
@@ -2544,7 +2539,7 @@ summary.accordion-header::-webkit-details-marker {
 
 .nav .nav-item.active > a:focus,
 .nav .nav-item.active > a:hover {
-  color: #5755d9;
+  color: #009688;
 }
 
 .nav .nav {
@@ -2579,7 +2574,7 @@ summary.accordion-header::-webkit-details-marker {
 
 .pagination .page-item a:focus,
 .pagination .page-item a:hover {
-  color: #5755d9;
+  color: #009688;
 }
 
 .pagination .page-item.disabled a {
@@ -2589,7 +2584,7 @@ summary.accordion-header::-webkit-details-marker {
 }
 
 .pagination .page-item.active a {
-  background: #5755d9;
+  background: #009688;
   color: #fff;
 }
 
@@ -2723,7 +2718,7 @@ summary.accordion-header::-webkit-details-marker {
 }
 
 .step .step-item:not(:first-child)::before {
-  background: #5755d9;
+  background: #009688;
   content: "";
   height: 2px;
   left: -50%;
@@ -2740,7 +2735,7 @@ summary.accordion-header::-webkit-details-marker {
 }
 
 .step .step-item a::before {
-  background: #5755d9;
+  background: #009688;
   border: .1rem solid #fff;
   border-radius: 50%;
   content: "";
@@ -2756,7 +2751,7 @@ summary.accordion-header::-webkit-details-marker {
 
 .step .step-item.active a::before {
   background: #fff;
-  border: .1rem solid #5755d9;
+  border: .1rem solid #009688;
 }
 
 .step .step-item.active ~ .step-item::before {
@@ -2794,13 +2789,13 @@ summary.accordion-header::-webkit-details-marker {
 
 .tab .tab-item a:focus,
 .tab .tab-item a:hover {
-  color: #5755d9;
+  color: #009688;
 }
 
 .tab .tab-item.active a,
 .tab .tab-item a.active {
-  border-bottom-color: #5755d9;
-  color: #5755d9;
+  border-bottom-color: #009688;
+  color: #009688;
 }
 
 .tab .tab-item.tab-action {
@@ -2896,8 +2891,8 @@ summary.accordion-header::-webkit-details-marker {
 }
 
 .toast.toast-primary {
-  background: rgba(87, 85, 217, .9);
-  border-color: #5755d9;
+  background: rgba(0, 150, 136, .9);
+  border-color: #009688;
 }
 
 .toast.toast-success {
@@ -3023,21 +3018,21 @@ summary.accordion-header::-webkit-details-marker {
 }
 
 .text-primary {
-  color: #5755d9;
+  color: #009688;
 }
 
 a.text-primary:focus,
 a.text-primary:hover {
-  color: #4240d4;
+  color: #007d71;
 }
 
 .text-secondary {
-  color: #e5e5f9;
+  color: #d5edec;
 }
 
 a.text-secondary:focus,
 a.text-secondary:hover {
-  color: #d1d0f4;
+  color: #c3e6e4;
 }
 
 .text-gray {
@@ -3086,12 +3081,12 @@ a.text-error:hover {
 }
 
 .bg-primary {
-  background: #5755d9;
+  background: #009688;
   color: #fff;
 }
 
 .bg-secondary {
-  background: #f1f1fc;
+  background: #e0f2f1;
 }
 
 .bg-dark {
@@ -3257,7 +3252,7 @@ a.text-error:hover {
 
 .loading::after {
   animation: loading 500ms infinite linear;
-  border: .1rem solid #5755d9;
+  border: .1rem solid #009688;
   border-radius: 50%;
   border-right-color: transparent;
   border-top-color: transparent;
