--- a/css/custom.css
+++ b/css/custom.css
@@ -114,12 +114,14 @@ body {
   cursor: move;
 }
 
-#modal-sortfields .sort-item:nth-child(2) {
+#modal-sortfields .sort-item:nth-child(2),
+#modal-sortfields .sort-item-holder {
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
 }
 
-#modal-sortfields .sort-item:last-child {
+#modal-sortfields .sort-item:nth-last-child(2),
+#modal-sortfields .sort-item-holder {
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
 }
@@ -132,6 +134,11 @@ body {
 
 #modal-sortfields .sort-item > *:last-child {
   flex-grow: 1;
+}
+
+#modal-sortfields .sort-item-holder {
+  margin-top: .2em;
+  height: 2em;
 }
 
 .content {
