update ui for sort/group notation

--- a/desktop/css/custom.css
+++ b/desktop/css/custom.css
@@ -132,6 +132,10 @@ body, .body {
   flex-basis: 0;
 }
 
+.no-break {
+  white-space: nowrap;
+}
+
 .v-center {
   display: flex;
   align-items: center;
