--- a/desktop/css/md-themes.css
+++ b/desktop/css/md-themes.css
@@ -2,6 +2,7 @@
 
 .md-default {
   font-family: Roboto;
+  line-height: 1.5;
 }
 
 .md-default a {
@@ -56,4 +57,18 @@ code {
   display: block;
   margin: 10px;
   overflow: auto;
+}
+
+.md-default .task-list-item input {
+  margin: 0 0.35em 0 -.5em!important;
+}
+
+.md-default ul {
+  margin-top: 0em;
+  margin-bottom: 0em;
+}
+
+.md-default p {
+  margin: 0;
+  margin-bottom: .5em;
 }
