update timeline ui

--- a/desktop/css/md-themes.css
+++ b/desktop/css/md-themes.css
@@ -129,7 +129,7 @@ code {
   content: "";
   position: relative;
   left: calc(25% + 5px);
-  top: 3.25em;
+  top: 2.8em;
   border: 3px solid salmon;
   background-color: salmon;
   width: 12px;
@@ -140,10 +140,10 @@ code {
 .md-default .timeline .entry:hover:before {
   background-color: white;
 }
-
+/* 
 .md-default .timeline .head {
-  font-size: 150%;
-}
+  font-size: 120%;
+} */
 
 .md-default .timeline .content {
   color: #999999;
